[project]
name = "ccsds-tmtc-py"
version = "0.1.0"
description = "Python implementation of CCSDS TM/TC protocols, converted from eu.dariolucia.ccsds.tmtc."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "reedsolo>=1.7,<2.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
